// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-entities Renders \`pbehavior-entities\` with entities 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-stub />
    </div>
    <!---->
  </div>
  <div
    class="v-data-table v-data-table--has-bottom theme--light"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Id"
              class="text-start"
              data-value="_id"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Id
                </span>
              </div>
            </th>
            <th
              aria-label="Name"
              class="text-start"
              data-value="name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Name
                </span>
              </div>
            </th>
            <th
              aria-label="Type"
              class="text-start"
              data-value="type"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Type
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-0
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-0
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-0
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-1
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-1
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-1
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-2
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-2
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-2
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-3
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-3
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-3
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-4
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-4
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-4
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-5
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-5
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-5
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-6
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-6
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-6
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-7
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-7
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-7
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-8
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-8
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-8
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
        id-pbehavior-entity-9
            </td>
            <td
              class="text-start"
            >
        name-pbehavior-entity-9
            </td>
            <td
              class="text-start"
            >
        type-pbehavior-entity-9
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="v-data-footer"
    >
      <div
        class="v-data-footer__select"
      >
        Rows per page:
        <div
          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
        >
          <div
            class="v-input__control"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="v-input__slot"
              role="button"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <div
                    class="v-select__selection v-select__selection--comma"
                  >
                    10
                  </div>
                  <input
                    aria-label="Rows per page:"
                    aria-readonly="false"
                    autocomplete="off"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <input
                  type="hidden"
                  value="10"
                />
              </div>
              <div
                class="v-menu"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-data-footer__pagination"
      >
        1-10 of 11
      </div>
      <div
        class="v-data-footer__icons-before"
      >
        <button
          aria-label="Previous page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_left
            </i>
          </span>
        </button>
      </div>
      <div
        class="v-data-footer__icons-after"
      >
        <button
          aria-label="Next page"
          class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_right
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`pbehavior-entities Renders \`pbehavior-entities\` without entities 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-stub />
    </div>
    <!---->
  </div>
  <div
    class="v-data-table v-data-table--has-bottom theme--light"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Id"
              class="text-start"
              data-value="_id"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Id
                </span>
              </div>
            </th>
            <th
              aria-label="Name"
              class="text-start"
              data-value="name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Name
                </span>
              </div>
            </th>
            <th
              aria-label="Type"
              class="text-start"
              data-value="type"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Type
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="3"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="v-data-footer"
    >
      <div
        class="v-data-footer__select"
      >
        Rows per page:
        <div
          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
        >
          <div
            class="v-input__control"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="v-input__slot"
              role="button"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <div
                    class="v-select__selection v-select__selection--comma"
                  >
                    10
                  </div>
                  <input
                    aria-label="Rows per page:"
                    aria-readonly="false"
                    autocomplete="off"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <input
                  type="hidden"
                  value="10"
                />
              </div>
              <div
                class="v-menu"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-data-footer__pagination"
      >
        –
      </div>
      <div
        class="v-data-footer__icons-before"
      >
        <button
          aria-label="Previous page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_left
            </i>
          </span>
        </button>
      </div>
      <div
        class="v-data-footer__icons-after"
      >
        <button
          aria-label="Next page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_right
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
  <!---->
</div>
`;
